--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <section class="contact">
     <h2 class="section-title">Contact Us</h2>
-    <p>📧 Email: <a href="mailto:connect@anstechsolutions.com">connect@anstechsolutions.com</a><br>
+    <p>📧 Email: <a href="mailto:care@anstechsolutions.com">care@anstechsolutions.com</a><br>
        🌐 Website: <a href="https://www.anstechsolutions.com">www.anstechsolutions.com</a><br>
        📍 Location: India</p>
   </section>
