--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
       padding: 1.5rem 2rem;
       text-align: center;
     }
+    header img {
+      max-width: 120px;
+      margin-bottom: 1rem;
+    }
     header h1 {
       font-size: 2.5rem;
       margin-bottom: 0.3rem;
     }
     header p {
       font-size: 1.2rem;
-      opacity: 0.9;
+      opacity: 0.95;
     }
     section {
       max-width: 960px;
@@ -36,9 +40,6 @@
       font-size: 2rem;
       margin-bottom: 1rem;
       color: #004aad;
-    }
-    .services, .contact {
-      margin-top: 2rem;
     }
     ul {
       list-style: none;
@@ -56,6 +57,10 @@
       position: absolute;
       left: 0;
     }
+    .contact a {
+      color: #004aad;
+      text-decoration: none;
+    }
     footer {
       background: #001e3c;
       color: #ccc;
@@ -72,31 +77,32 @@
 </head>
 <body>
   <header>
+    <img src="logo.png" alt="ANS Tech Solutions Logo">
     <h1>ANS Tech Solutions</h1>
-    <p>Crafting Tomorrow's Tech, Today</p>
+    <p>Transforming Ideas into Scalable Digital Solutions</p>
   </header>
 
-  <section class="about">
-    <h2 class="section-title">About Us</h2>
-    <p>ANS Tech Solutions is a forward-thinking IT solution provider dedicated to delivering smart, scalable, and future-ready technologies to businesses of all sizes. From automation to cloud, we help enterprises innovate and transform.</p>
+  <section class="announcement">
+    <h2 class="section-title">We're Now Live!</h2>
+    <p>We specialize in <strong>custom software development</strong>, <strong>modernization of legacy systems</strong>, <strong>IT consultation</strong>, and <strong>cybersecurity solutions</strong>. Empower your business with cutting-edge technology tailored for your unique needs.</p>
   </section>
 
   <section class="services">
-    <h2 class="section-title">Our Services</h2>
+    <h2 class="section-title">Our Expertise</h2>
     <ul>
       <li>Custom Software Development</li>
+      <li>Legacy Software Modernization</li>
+      <li>IT Consultation & Strategy</li>
+      <li>Cybersecurity & Data Protection</li>
       <li>Cloud Integration & Infrastructure</li>
-      <li>IT Consultancy & Digital Strategy</li>
-      <li>Web & Mobile App Solutions</li>
-      <li>Data Analytics & Automation</li>
     </ul>
   </section>
 
   <section class="contact">
-    <h2 class="section-title">Contact Us</h2>
+    <h2 class="section-title">Get in Touch</h2>
     <p>📧 Email: <a href="mailto:care@anstechsolutions.com">care@anstechsolutions.com</a><br>
        🌐 Website: <a href="https://www.anstechsolutions.com">www.anstechsolutions.com</a><br>
-       📍 Location: India</p>
+       📍 Based in India, serving globally</p>
   </section>
 
   <footer>
