--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="ANS Tech Solutions Logo">
+    <img src="logo.PNG" alt="ANS Tech Solutions Logo">
     <h1>ANS Tech Solutions</h1>
     <p>Transforming Ideas into Scalable Digital Solutions</p>
   </header>
