--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             align-items: center;
             text-decoration: none;
             transition: transform 0.3s ease;
+            gap: 0.75rem;
         }
 
         .logo:hover {
@@ -87,6 +88,17 @@
 
         .logo:hover img {
             filter: drop-shadow(0 0 10px rgba(59, 130, 246, 0.5));
+        }
+
+        .logo-text {
+            font-size: 1.8rem;
+            font-weight: 800;
+            color: #3b82f6;
+            position: relative;
+        }
+
+        .logo:hover .logo-text {
+            color: #60a5fa;
         }
 
         .nav-links {
@@ -357,7 +369,8 @@
     <header>
         <nav>
             <a href="#" class="logo">
-                <img src="logo.PNG" alt="ANS Tech Solution" />
+                <img src="logo.PNG" alt="ANS Tech Solutions" />
+                <span class="logo-text">ANS Tech Solutions</span>
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
