--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#solutions">Solutions</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -544,6 +545,70 @@
                 <div class="service-icon">☁️</div>
                 <h3>Cloud Integration & Infrastructure</h3>
                 <p>Seamless cloud migration and infrastructure optimization to enhance scalability, reduce costs, and improve operational efficiency.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="solutions" id="solutions">
+        <h2 class="section-title">Our Software Solutions</h2>
+        <p style="text-align: center; font-size: 1.2rem; color: #cbd5e1; margin-bottom: 2rem;">Real-world software solutions we've developed to transform businesses and modernize operations</p>
+        
+        <div class="solutions-grid">
+            <div class="solution-card">
+                <div class="solution-header">
+                    <div class="solution-icon">📋</div>
+                    <div>
+                        <div class="solution-type">Digital Board Management</div>
+                        <h3>FIFO Digital Board Software</h3>
+                    </div>
+                </div>
+                <p>Advanced digital board management system implementing First-In-First-Out (FIFO) methodology for efficient queue management, resource allocation, and workflow optimization.</p>
+                <ul class="solution-features">
+                    <li>Real-time queue tracking and management</li>
+                    <li>Automated FIFO algorithm implementation</li>
+                    <li>Interactive digital dashboard</li>
+                    <li>Performance analytics and reporting</li>
+                    <li>Multi-user access control</li>
+                </ul>
+                <div class="solution-status">✅ Deployed & Active</div>
+            </div>
+
+            <div class="solution-card">
+                <div class="solution-header">
+                    <div class="solution-icon">🔧</div>
+                    <div>
+                        <div class="solution-type">Legacy Modernization</div>
+                        <h3>Preventive Maintenance System</h3>
+                    </div>
+                </div>
+                <p>Complete transformation of legacy maintenance software into a modern, web-based preventive maintenance management system with enhanced functionality and user experience.</p>
+                <ul class="solution-features">
+                    <li>Legacy system migration to web platform</li>
+                    <li>Automated maintenance scheduling</li>
+                    <li>Asset lifecycle management</li>
+                    <li>Mobile-responsive interface</li>
+                    <li>Integration with existing ERP systems</li>
+                </ul>
+                <div class="solution-status">✅ Successfully Modernized</div>
+            </div>
+
+            <div class="solution-card">
+                <div class="solution-header">
+                    <div class="solution-icon">📊</div>
+                    <div>
+                        <div class="solution-type">Automation & Traceability</div>
+                        <h3>Automated Reporting & Traceability</h3>
+                    </div>
+                </div>
+                <p>Intelligent automation system that streamlines reporting processes and provides comprehensive traceability across all business operations with real-time data insights.</p>
+                <ul class="solution-features">
+                    <li>Automated report generation</li>
+                    <li>End-to-end traceability tracking</li>
+                    <li>Real-time data visualization</li>
+                    <li>Compliance reporting automation</li>
+                    <li>Custom dashboard creation</li>
+                </ul>
+                <div class="solution-status">✅ Fully Automated</div>
             </div>
         </div>
     </section>
