--- a/index.html
+++ b/index.html
@@ -733,10 +733,10 @@
         </div>
 
         <div class="ppms-images">
-            <img src="assets/ppms/dashboard.png" alt="PPMS Dashboard">
-            <img src="assets/ppms/schedule.png" alt="Maintenance Schedule">
-            <img src="assets/ppms/checklist.png" alt="PM Checklist">
-            <img src="assets/ppms/analytics.png" alt="Breakdown Analytics">
+            <img src="assets/dashboard.png" alt="PPMS Dashboard">
+            <img src="assets/schedule.png" alt="Maintenance Schedule">
+            <img src="assets/checklist.png" alt="PM Checklist">
+            <img src="assets/analytics.png" alt="Breakdown Analytics">
         </div>
     </div>
 </section>
