--- a/index.html
+++ b/index.html
@@ -699,6 +699,10 @@
                     <h3>📍 Location</h3>
                     <p>Based in India, serving globally</p>
                 </div>
+                 <div class="contact-item">
+                    <h3>📞 Call / WhatsApp</h3>
+                    <p>Based in India, serving globally</p>
+                </div>
             </div>
         </div>
         <section class="ppms" id="ppms">
