--- a/index.html
+++ b/index.html
@@ -699,9 +699,12 @@
                     <h3>📍 Location</h3>
                     <p>Based in India, serving globally</p>
                 </div>
-                 <div class="contact-item">
-                    <h3>📞 Call / WhatsApp</h3>
-                    <p>+91-8800-693-666</p>
+                <div class="contact-item">
+                    <h3>📞 Call / 💬 WhatsApp</h3>
+                        <p>
+                        <a href="tel:+918800693666">Call</a> |
+                        <a href="https://wa.me/918800693666" target="_blank">WhatsApp</a>
+                        </p>
                 </div>
             </div>
         </div>
