--- a/index.html
+++ b/index.html
@@ -699,13 +699,18 @@
                     <h3>📍 Location</h3>
                     <p>Based in India, serving globally</p>
                 </div>
-                <div class="contact-item">
-                    <h3>📞 Call / 💬 WhatsApp</h3>
-                        <p>
-                        <a href="tel:+918800693666">Call</a> |
-                        <a href="https://wa.me/918800693666" target="_blank">WhatsApp</a>
-                        </p>
-                </div>
+                <<div class="contact-item">
+    <h3>📞 Call / 💬 WhatsApp</h3>
+    <p>
+        <a href="tel:+918800693666">+91-8800-693-666</a>
+    </p>
+    <p>
+        <a href="https://wa.me/918800693666" target="_blank">
+            Chat on WhatsApp
+        </a>
+    </p>
+</div>
+
             </div>
         </div>
         <section class="ppms" id="ppms">
