--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="PPMS – Planned Preventive Maintenance System for manufacturing plants to reduce breakdowns, improve uptime and increase OEE.">
 
-    <title>ANS Tech Solution - Cutting-Edge Technology Solutions</title>
+    <title>ANS Tech Solution - Smart Technology, Built for Real Business Needs</title>
     <style>
         * {
             margin: 0;
@@ -580,8 +580,8 @@
         </div>
         
         <div class="hero-content">
-            <h1>Cutting-Edge Technology Solutions</h1>
-            <p>Empower your business with cutting-edge technology tailored to your unique needs. We specialize in custom software development, modernization of legacy systems, IT consultation, and cybersecurity solutions.</p>
+            <h1>Smart Technology, Built for Real Business Needs</h1>
+            <p>We create purpose-driven technology solutions tailored to your organization. Our expertise includes custom software development, legacy system modernization, IT consulting, and cybersecurity — all designed to deliver long-term value and performance.</p>
             <a href="#contact" class="cta-button">Get Started Today</a>
         </div>
     </section>
